@@ -56,6 +56,13 @@ GeditPythonModule	*gedit_python_module_new		(const gchar* path,
 
 GObject			*gedit_python_module_new_object		(GeditPythonModule *module);
 
+
+/* --- python utils --- */
+
+void			gedit_python_garbage_collect		(void);
+
+void			gedit_python_shutdown			(void);
+
 G_END_DECLS
 
 #endif
